// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`audio peaks utilities > getAudioBufferPeaks: can parse properly 1`] = `
[
  0.6537110351961788,
  0.6589386119727084,
  0.3585002964679282,
  0.5117984289605068,
  0.3869929089533406,
  0.41492626057705423,
  0.4507973167484809,
  0.36078344949055485,
  0.11721864732186763,
  0.009707109423239926,
  0.20420609468328663,
  0.31357142600901233,
  0.5631128349898993,
  0.31652105221614485,
  0.1799399882668817,
  0.24232670996192457,
  0.20901652366059884,
  0.3883465934590703,
  0.2774254843754408,
  0.25290503322720675,
  0.38265316531473625,
  0.17407899000030097,
  0.5325829738360703,
  0.3971680841253281,
  0.06192758408923382,
  0.15993129578215867,
  0.2697797493588296,
  1,
  0.21216689961358184,
  0.3130622338310498,
  0.3697563914652832,
  0.30125275646427624,
  0.3246286399912498,
  0.3161181253335247,
  0.6005197950445419,
  0.06326995105840559,
  0.00924179930948992,
  0.000346493221450785,
  0.5679351708922599,
  0.3929845203313034,
  0.3411292982701772,
  0.3626444324010771,
  0.45278170525000105,
  0.30956720112505254,
  0.31729029197639513,
  0.24198029822224146,
  0.35695811427709,
  0.3647064034125553,
  0.24790296475963894,
  0.009152427366294055,
  0.0003158127891524066,
  0.00031612815988072183,
  0.49033510185259704,
  0.4836835434224133,
  0.15981846392822024,
  0.4022550095191577,
  0.3904447093631989,
  0.2948588687356667,
  0.45248312912512967,
  0.2033595418710675,
  0.557261217029297,
  0.21453410086649213,
  0.24933788634447918,
  0.10543922501073481,
  0.5530273863969845,
  0.22439531547877503,
  0.5297881830685399,
  0.4907236008131562,
  0.19686510495337917,
  0.15456208054454035,
  0.4344022754213683,
  0.21936100104200928,
  0.016402541808748197,
  0.009735495620380128,
  0.5138793371550434,
  0.6782640754551147,
  0.40573459987569327,
  0.2674683126958889,
  0.13847238921611896,
  0.27487786004880327,
  0.4353628934085258,
  0.39743268575869095,
  0.26601912018832957,
  0.2708969258485976,
  0.23615781103880307,
  0.21229414726343804,
  0.05298165344080495,
  0.29081982222597363,
  0.7616982542689177,
  0.5621287454208708,
  0.5845652599372227,
  0.5559726228597457,
  0.19751709571380624,
  0.36877139956961474,
  0.22516132033348374,
  0.1628900220516805,
  0.31617665872591894,
  0.11143923130684227,
  0.16644608665535515,
  0.0004537301955573255,
]
`;

exports[`audio peaks utilities > getAudioInfo: can parse properly 1`] = `
{
  "duration": 23902.04081632653,
  "peaks": [
    0.6537110351961788,
    0.6589386119727084,
    0.3585002964679282,
    0.5117984289605068,
    0.3869929089533406,
    0.41492626057705423,
    0.4507973167484809,
    0.36078344949055485,
    0.11721864732186763,
    0.009707109423239926,
    0.20420609468328663,
    0.31357142600901233,
    0.5631128349898993,
    0.31652105221614485,
    0.1799399882668817,
    0.24232670996192457,
    0.20901652366059884,
    0.3883465934590703,
    0.2774254843754408,
    0.25290503322720675,
    0.38265316531473625,
    0.17407899000030097,
    0.5325829738360703,
    0.3971680841253281,
    0.06192758408923382,
    0.15993129578215867,
    0.2697797493588296,
    1,
    0.21216689961358184,
    0.3130622338310498,
    0.3697563914652832,
    0.30125275646427624,
    0.3246286399912498,
    0.3161181253335247,
    0.6005197950445419,
    0.06326995105840559,
    0.00924179930948992,
    0.000346493221450785,
    0.5679351708922599,
    0.3929845203313034,
    0.3411292982701772,
    0.3626444324010771,
    0.45278170525000105,
    0.30956720112505254,
    0.31729029197639513,
    0.24198029822224146,
    0.35695811427709,
    0.3647064034125553,
    0.24790296475963894,
    0.009152427366294055,
    0.0003158127891524066,
    0.00031612815988072183,
    0.49033510185259704,
    0.4836835434224133,
    0.15981846392822024,
    0.4022550095191577,
    0.3904447093631989,
    0.2948588687356667,
    0.45248312912512967,
    0.2033595418710675,
    0.557261217029297,
    0.21453410086649213,
    0.24933788634447918,
    0.10543922501073481,
    0.5530273863969845,
    0.22439531547877503,
    0.5297881830685399,
    0.4907236008131562,
    0.19686510495337917,
    0.15456208054454035,
    0.4344022754213683,
    0.21936100104200928,
    0.016402541808748197,
    0.009735495620380128,
    0.5138793371550434,
    0.6782640754551147,
    0.40573459987569327,
    0.2674683126958889,
    0.13847238921611896,
    0.27487786004880327,
    0.4353628934085258,
    0.39743268575869095,
    0.26601912018832957,
    0.2708969258485976,
    0.23615781103880307,
    0.21229414726343804,
    0.05298165344080495,
    0.29081982222597363,
    0.7616982542689177,
    0.5621287454208708,
    0.5845652599372227,
    0.5559726228597457,
    0.19751709571380624,
    0.36877139956961474,
    0.22516132033348374,
    0.1628900220516805,
    0.31617665872591894,
    0.11143923130684227,
    0.16644608665535515,
    0.0004537301955573255,
  ],
}
`;
